# telegram-bot

./: .env  .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
payment-telegram-bot/: admin_notifications.py  bot.py  config.py  database.py  export_system.py  keyboards.py  multi_currency.py  payment_system.py  promo_system.py  referral_system.py  requirements.txt  subscription_system.py
